--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ cmake_minimum_required(VERSION 3.15)
 project(matrix_sparse)
 add_executable(matrix_sparse matrix_sparse.cpp) 
 
-find_package(Ginkgo 1.7.0 EXACT REQUIRED)
+find_package(Ginkgo 1.7.0 REQUIRED)
 target_link_libraries(matrix_sparse PUBLIC Ginkgo::ginkgo)
